[package]
name = "perfdata"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Parsing and handling performance data for monitoring engines like Nagios, Icinga2, ..."
repository = "https://github.com/benjamingroeber/perfdata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
# Enables the `derive` feature of serde.
serde = { version = "1.0.137", features = ["derive"], optional = true }

[dev-dependencies]
strum = { version = "0.24.0", features = ["derive"] }
